--- a/package.json
+++ b/package.json
@@ -31,7 +31,20 @@
   },
   "dependencies": {
     "aframe": "^0.8.2",
+    "aframe-aabb-collider-component": "^3.1.0",
+    "aframe-animation-component": "^5.1.2",
+    "aframe-aterrain-component": "^1.2.0",
+    "aframe-click-drag-component": "^3.0.1",
+    "aframe-environment-component": "^1.1.0",
+    "aframe-extras": "^5.0.1",
+    "aframe-gltf-exporter-component": "^0.1.0",
+    "aframe-href-component": "^0.5.1",
+    "aframe-look-at-component": "^0.7.0",
+    "aframe-physics-system": "^3.3.0",
+    "aframe-playground-components": "^0.1.1",
+    "aframe-ui-modal-component": "^1.0.2",
     "cannon": "github:schteppe/cannon.js",
+    "sketchbook": "^1.0.0",
     "three": "latest",
     "three-obj-mtl-loader": "^1.0.3"
   }
